[package]
name = "air-play-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
libmdns = "0.7.2"
mac_address = "1.1.4"
plist = "1.3.1"
rtsp-types = "0.0.4"
serde = { version = "1.0.152", features = ["derive"] }
wifi-rs = "0.2.2"

